--- a/server/client/src/index.ejs
+++ b/server/client/src/index.ejs
@@ -7,17 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Jura:700|Raleway:400,900i|Spectral:200i,500" rel="stylesheet">
+    <link rel="stylesheet" href="<%= htmlWebpackPlugin.files.chunks.main.css %>">
     <title>Garcia Technology Group</title>
   </head>
   <body>
     <noscript>
       <section>
         <div>
-          <h1>Out of the Timbers</h1>
-          <p>Welcome to Out of the Timbers, the home of finely crafted works.</p>
+          <h1>Garcia Technology Group</h1>
+          <p>Welcome to Garcia Technology Group.</p>
+          <p>In order to properly view this page, please enable JavaScript in your browser settings.</p>
         </div>
       </section>
     </noscript>
     <div id="app"></div>
+    <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
   </body>
 </html>
